Manuals/LJV_communication_library1_3/20130301_1_3_0_0 x86/ja/Sample/C#/Sample/Source/include/LJV7_IF.h



/// Ｅｔｈｅｒｎｅｔ設定構造体
typedef struct {
	BYTE	abyIpAddress[4];	// 接続するコントローラのIPアドレス
	WORD	wPortNo;			// 接続するコントローラのポート番号
	BYTE	reserve[2];			// 予約
} LJV7IF_ETHERNET_CONFIG;


/// 日時構造体
typedef struct {
	BYTE byYear;		// 年(０～９９の範囲で、２０００～２０９９年を意味する)
	BYTE byMonth;		// 月(１～１２)
	BYTE byDay;			// 日(１～３１)
	BYTE byHour;		// 時(０～２３)
	BYTE byMinute;		// 分(０～５９)
	BYTE bySecond;		// 秒(０～５９)
	BYTE reserve[2];	// 予約
} LJV7IF_TIME;


/// 設定項目指定構造体
typedef struct {
	BYTE	byType;			// 設定種別
	BYTE	byCategory;		// 設定カテゴリ
	BYTE	byItem;			// 設定項目
	BYTE	reserve;		// 予約
	BYTE	byTarget1;		// 設定対象１
	BYTE	byTarget2;		// 設定対象２
	BYTE	byTarget3;		// 設定対象３
	BYTE	byTarget4;		// 設定対象４
} LJV7IF_TARGET_SETTING;


/// 測定結果構造体
typedef struct {
	BYTE byDataInfo;		// 測定値が有効値か
	BYTE byJudge;			// 公差判定結果
	BYTE reserve[2];		// 予約
	FLOAT fValue;			// 測定値
} LJV7IF_MEASURE_DATA;


/// プロファイル情報構造体
typedef struct {
	BYTE	byProfileCnt;	// プロファイルデータがいくつ格納されているか
	BYTE	byEnvelope;		// プロファイル圧縮（時間軸）がＯＮかどうか
	BYTE 	reserve[2];		// 予約
	WORD	wProfDataCnt;	// プロファイルのデータ数
	BYTE 	reserve2[2];	// 予約
	LONG	lXStart;		// １点目のⅩ座標
	LONG	lXPitch;		// プロファイルデータのⅩ方向間隔
} LJV7IF_PROFILE_INFO;


/// プロファイルヘッダ情報構造体
typedef struct {
	DWORD	reserve;		// 予約
	DWORD	dwTriggerCnt;	// 測定開始から何回目のトリガのプロファイルか
	DWORD	dwEncoderCnt;	// 測定開始から何回目のエンコーダトリガのプロファイルか
	DWORD	reserve2[3];	// 予約
} LJV7IF_PROFILE_HEADER;


/// プロファイルフッタ情報構造体
typedef struct {
	DWORD	reserve;		// 予約
} LJV7IF_PROFILE_FOOTER;


/// 高速モードプロファイル取得要求構造体（バッチ測定：ＯＦＦ）
typedef struct {
	BYTE 	byTargetBank;	// 対象面
	BYTE 	byPosMode;		// 位置指定方法
	BYTE 	reserve[2];		// 予約
	DWORD	dwGetProfNo;	// 取得対象のプロファイル番号
	BYTE	byGetProfCnt;	// 読み出すプロファイルの数
	BYTE 	byErase;		// 読み出したプロファイルをコントローラから消去するか
	BYTE 	reserve2[2];	// 予約
} LJV7IF_GET_PROFILE_REQ;


/// 高速モードプロファイル取得要求構造体（バッチ測定：ＯＮ）
typedef struct {
	BYTE 	byTargetBank;	// 対象面
	BYTE 	byPosMode;		// バッチ位置指定方法
	BYTE 	reserve[2];		// 予約
	DWORD	dwGetBatchNo;	// 取得対象のプロファイルのバッチ番号
	DWORD	dwGetProfNo;	// 指定バッチ番号内の取得開始プロファイル番号
	BYTE	byGetProfCnt;	// 読み出すプロファイルの数
	BYTE 	byErase;		// 読み出したプロファイルをコントローラから消去するか
	BYTE 	reserve2[2];	// 予約
} LJV7IF_GET_BATCH_PROFILE_REQ;


/// 高機能モードプロファイル取得要求構造体（バッチ測定：ＯＮ）
typedef struct {
	BYTE byPosMode;		// バッチ位置指定方法
	BYTE reserve[3];		// 予約
	DWORD dwGetBatchNo;		// 取得対象のプロファイルのバッチ番号
	DWORD dwGetProfNo;		// 指定バッチ番号内の取得開始プロファイル番号
	BYTE byGetProfCnt;		// 読み出すプロファイルの数
	BYTE reserve2[3];		// 予約
} LJV7IF_GET_BATCH_PROFILE_ADVANCE_REQ;


/// 高速モードプロファイル取得返信構造体（バッチ測定：ＯＦＦ）
typedef struct {
	DWORD	dwCurrentProfNo;	// 最新プロファイル番号
	DWORD	dwOldestProfNo;		// コントローラ内の最古プロファイル番号
	DWORD	dwGetTopProfNo;		// 読み出したプロファイルの先頭番号
	BYTE	byGetProfCnt;		// 読み出したプロファイル数	
	BYTE 	reserve[3];			// 予約
} LJV7IF_GET_PROFILE_RSP;


/// 高速モードプロファイル取得返信構造体（バッチ測定：ＯＮ）
typedef struct {
	DWORD	dwCurrentBatchNo;		// 現時点での最新バッチ番号。
	DWORD	dwCurrentBatchProfCnt;	// 最新バッチ内のプロファイルの数。
	DWORD	dwOldestBatchNo;		// コントローラが保持する、最も古いバッチのバッチ番号。
	DWORD	dwOldestBatchProfCnt;	// コントローラが保持する、最も古いバッチ内のプロファイルの数。
	DWORD	dwGetBatchNo;			// 読み出したバッチ番号。
	DWORD	dwGetBatchProfCnt;		// 読み出したバッチ内のプロファイルの数。
	DWORD	dwGetBatchTopProfNo;	// 読み出した中で、一番古いプロファイルがバッチ内の何番目のプロファイルかを示す。
	BYTE	byGetProfCnt;			// 読み出したプロファイルの数。
	BYTE	byCurrentBatchCommited;	// 最新バッチNo.のバッチ測定が完了しているかを示す。
	BYTE 	reserve[2];				// 予約
} LJV7IF_GET_BATCH_PROFILE_RSP;


/// 高機能モードプロファイル取得返信構造体（バッチ測定：ＯＮ）
typedef struct {
	DWORD	dwGetBatchNo;			// 読み出したバッチ番号。
	DWORD	dwGetBatchProfCnt;		// 読み出したバッチ内のプロファイルの数。
	DWORD	dwGetBatchTopProfNo;	// 読み出した中で、一番古いプロファイルがバッチ内の何番目のプロファイルかを示す。
	BYTE	byGetProfCnt;			// 読み出したプロファイルの数。
	BYTE 	reserve[3];				// 予約
} LJV7IF_GET_BATCH_PROFILE_ADVANCE_RSP;


/// ストレージ状態要求構造体
typedef struct {
	DWORD	dwRdArea;				// 読み出し対象面 
} LJV7IF_GET_STRAGE_STATUS_REQ;


/// ストレージ状態返信構造体
typedef struct {
	DWORD	dwSurfaceCnt;			// ストレージ面数
	DWORD	dwActiveSurface;		// アクティブストレージ面
} LJV7IF_GET_STRAGE_STATUS_RSP;


/// ストレージ情報構造体
typedef struct {
	BYTE	byStatus;				// ストレージ状態
	BYTE	byProgramNo;			// 該当ストレージ面のプログラムNo
	BYTE	byTarget;				// ストレージ対象
	BYTE	reserve[5];				// 予約
	DWORD	dwStorageCnt;			// ストレージ点数
} LJV7IF_STORAGE_INFO;


/// ストレージデータ取得要求構造体
typedef struct {
	BYTE 	reserve[4];				// 予約
	DWORD	dwSurface;				// 読み出しストレージ面
	DWORD	dwStartNo;				// 読み出し開始するストレージ番号
	DWORD	dwDataCnt;				// 読み出し点数
} LJV7IF_GET_STORAGE_REQ;


/// バッチプロファイルストレージ取得要求構造体
typedef struct {
	BYTE 	reserve[4];				// 予約
	DWORD	dwSurface;				// 読み出しストレージ面
	DWORD	dwGetBatchNo;			// 読み出バッチ番号
	DWORD	dwGetBatchTopProfNo;	// バッチ内の読み出し開始プロファイル番号
	BYTE	byGetProfCnt;			// 読み出しプロファイル点数
	BYTE	reserved[3];			// 予約
} LJV7IF_GET_BATCH_PROFILE_STORAGE_REQ;