Manuals/LJV_communication_library1_3/20130301_1_3_0_0 x86/ja/Sample/C#/Sample/Source/Sample/NativeMethods.cs

//------------------------------------------------------------------------------ 
// <copyright file="NativeMethods.cs" company="KEYENCE">
//     Copyright (c) 2012 KEYENCE CORPORATION.  All rights reserved.
// </copyright>
//----------------------------------------------------------------------------- 
using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;

namespace Sample
{
	#region 列挙型
	/// <summary>
	/// 戻り値定義
	/// </summary>
	public enum Rc
	{
		/// <summary>正常終了</summary>
		Ok = 0x0000,
		/// <summary>デバイスのオープンに失敗</summary>
		ErrOpenDevice = 0x1000,
		/// <summary>デバイスがオープンされていない</summary>
		ErrNoDevice,
		/// <summary>コマンド送信エラー</summary>
		ErrSend,
		/// <summary>レスポンス受信エラー</summary>
		ErrReceive,
		/// <summary>タイムアウト</summary>
		ErrTimeout,
		/// <summary>空きメモリなし</summary>
		ErrNomemory,
		/// <summary>パラメータエラー</summary>
		ErrParameter,
		/// <summary>受信ヘッダのフォーマットエラー</summary>
		ErrRecvFmt,
		
		/// <summary>未OPENエラー(高速通信用)</summary>
		ErrHispeedNoDevice = 0x1009,	
		/// <summary>OPEN済みエラー(高速通信用)</summary>
		ErrHispeedOpenYet,
		/// <summary>既に高速通信中エラー(高速通信用)</summary>
		ErrHispeedRecvYet,		
		/// <summary>バッファサイズ不足</summary>
		ErrBufferShort,
	}

	/// 設定値格納階層の指定
	public enum SettingDepth : byte
	{
		/// <summary>設定書き込み領域</summary>
		Write	= 0x00,
		/// <summary>動作中設定領域</summary>
		Running	= 0x01,
		/// <summary>保存用領域</summary>
		Save	= 0x02,	
	};

	/// 測定値の有効無効を示す定義
	public enum MeasureDataInfo : byte
	{
		/// <summary>測定正常データ</summary>
		Valid	= 0x00,
		/// <summary>測定アラームデータ</summary>
		Alarm	= 0x01,
		/// <summary>判定待機値データ</summary>
		Wait	= 0x02,
	};

	/// 測定値の判定結果を示す定義
	[Flags]
	public enum JudgeResult : byte
	{
		Hi	= 0x01,
		Go	= 0x02,
		Lo	= 0x04,
	};

	/// プロファイル取得対象バッファの指定
	public enum ProfileBank : byte
	{
		/// <summary>アクティブ面</summary>
		Active		= 0x00,
		/// <summary>非アクティブ面</summary>		
		Inactive	= 0x01,
	};

	/// プロファイル取得位置指定方法の指定
	public enum ProfilePos : byte
	{
		/// <summary>最新から</summary>
		Current	= 0x00,
		/// <summary>最古から</summary>
		Oldest	= 0x01,
		/// <summary>位置を指定</summary>
		Spec	= 0x02,
	};

	/// バッチプロファイル取得位置指定方法の指定
	public enum BatchPos : byte
	{
		/// <summary>最新から</summary>
		Current		= 0x00,
		/// <summary>位置を指定</summary>
		Spec		= 0x02,
		/// <summary>確定後の最新から</summary>
		Commited	= 0x03,
		/// <summary>最新のみ</summary>
		CurrentOnly	= 0x04,
	};

	#endregion

	#region 構造体
	/// <summary>
	/// Ｅｔｈｅｒｎｅｔ設定構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_ETHERNET_CONFIG
	{
		/// <summary>IPアドレス</summary>
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 4)]
		public byte[] abyIpAddress;
		/// <summary>コマンド通信用ポート番号</summary>
		public ushort wPortNo;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;

	};

	/// <summary>
	/// 日時構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_TIME
	{
		/// <summary>年</summary>
		public byte byYear;
		/// <summary>月</summary>
		public byte byMonth;
		/// <summary>日</summary>
		public byte byDay;
		/// <summary>時</summary>
		public byte byHour;
		/// <summary>分</summary>
		public byte byMinute;
		/// <summary>秒</summary>
		public byte bySecond;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
	};

	/// <summary>
	/// 設定項目指定構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_TARGET_SETTING
	{
		/// <summary>設定種別</summary>
		public byte byType;
		/// <summary>設定カテゴリ</summary>
		public byte byCategory;
		/// <summary>設定項目</summary>
		public byte byItem;
		public byte reserve;
		/// <summary>設定対象1</summary>
		public byte byTarget1;
		/// <summary>設定対象2</summary>
		public byte byTarget2;
		/// <summary>設定対象3</summary>
		public byte byTarget3;
		/// <summary>設定対象4</summary>
		public byte byTarget4;
	};

	/// <summary>
	/// 測定結果構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_MEASURE_DATA
	{
		/// <summary>測定値が有効値か</summary>
		public MeasureDataInfo byDataInfo;
		/// <summary>公差判定結果</summary>
		public JudgeResult byJudge;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
		/// <summary>測定値</summary>
		public float fValue;
	};

	/// <summary>
	/// プロファイル情報構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_PROFILE_INFO
	{
		/// <summary>プロファイルデータがいくつ格納されているか</summary>
		public byte byProfileCnt;
		/// <summary>プロファイル圧縮（時間軸）がＯＮかどうか</summary>
		public byte byEnvelope;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
		/// <summary>プロファイルのデータ数</summary>
		public short wProfDataCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve2;
		/// <summary>1点目のX座標</summary>
		public int lXStart;
		/// <summary>プロファイルデータのX方向間隔</summary>
		public int lXPitch;
	};

	/// <summary>
	/// プロファイルヘッダー情報構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_PROFILE_HEADER
	{
		public uint reserve;
		/// <summary>測定開始から何回目のトリガのプロファイルか</summary>
		public uint dwTriggerCnt;
		/// <summary>測定開始から何回目のエンコーダトリガのプロファイルか</summary>
		public uint dwEncoderCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public uint[] reserve2;
	};

	/// <summary>
	/// プロファイルフッター情報構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_PROFILE_FOOTER
	{
		public uint reserve;
	};

	/// <summary>
	/// 高速モードプロファイル取得要求構造体（バッチ測定：ＯＦＦ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_PROFILE_REQ
	{
		/// <summary>対象面</summary>
		public ProfileBank byTargetBank;
		/// <summary>プロファイル位置指定方法</summary>
		public ProfilePos byPosMode;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
		/// <summary>取得対象のプロファイル番号</summary>
		public uint dwGetProfNo;
		/// <summary>読み出すプロファイルの数</summary>
		public byte byGetProfCnt;
		/// <summary>読み出したプロファイルをコントローラから消去するか</summary>
		public byte byErase;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve2;
	};

	/// <summary>
	/// 高速モードプロファイル取得要求構造体（バッチ測定：ＯＮ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_REQ
	{
		/// <summary>対象面</summary>
		public ProfileBank byTargetBank;
		/// <summary>バッチ位置指定方法</summary>
		public BatchPos byPosMode;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
		/// <summary>取得対象のプロファイルのバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>指定バッチ番号内の取得開始プロファイル番号</summary>
		public uint dwGetProfNo;
		/// <summary>読み出すプロファイルの数</summary>
		public byte byGetProfCnt;
		/// <summary>読み出したプロファイルをコントローラから消去するか</summary>
		public byte byErase;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve2;
	};

	/// <summary>
	/// 高機能モードプロファイル取得要求構造体（バッチ測定：ＯＮ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_ADVANCE_REQ
	{
		/// <summary>バッチ位置指定方法</summary>
		public BatchPos byPosMode;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve;
		/// <summary>取得対象のプロファイルのバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>指定バッチ番号内の取得開始プロファイル番号</summary>
		public uint dwGetProfNo;
		/// <summary>読み出すプロファイルの数</summary>
		public byte byGetProfCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve2;
	};

	/// <summary>
	/// 高速モードプロファイル取得返信構造体（バッチ測定：ＯＦＦ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_PROFILE_RSP
	{
		/// <summary>最新プロファイル番号</summary>
		public uint dwCurrentProfNo;
		/// <summary>コントローラ内の最古プロファイル番号</summary>
		public uint dwOldestProfNo;
		/// <summary>読み出したプロファイルの先頭番号</summary>
		public uint dwGetTopProfNo;
		/// <summary>読み出したプロファイル数</summary>
		public byte byGetProfCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve;
	};

	/// <summary>
	/// 高速モードプロファイル取得返信構造体（バッチ測定：ＯＮ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_RSP
	{
		/// <summary>最新バッチ番号</summary>
		public uint dwCurrentBatchNo;
		/// <summary>最新バッチ内のプロファイルの数</summary>
		public uint dwCurrentBatchProfCnt;
		/// <summary>コントローラが保持する、最も古いバッチのバッチ番号</summary>
		public uint dwOldestBatchNo;
		/// <summary>コントローラが保持する、最も古いバッチ内のプロファイルの数</summary>
		public uint dwOldestBatchProfCnt;
		/// <summary>読み出したバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>読み出したバッチ内のプロファイルの数</summary>
		public uint dwGetBatchProfCnt;
		/// <summary>読み出した中で、一番古いプロファイルがバッチ内の何番目のプロファイルか</summary>
		public uint dwGetBatchTopProfNo;
		/// <summary>読み出したプロファイルの数</summary>
		public byte byGetProfCnt;
		/// <summary>最新バッチNo.のバッチ測定が完了しているか</summary>
		public byte byCurrentBatchCommited;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)]
		public byte[] reserve;
	};

	/// <summary>
	/// 高機能モードプロファイル取得返信構造体（バッチ測定：ＯＮ）
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_ADVANCE_RSP
	{
		/// <summary>読み出したバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>読み出したバッチ内のプロファイルの数</summary>
		public uint dwGetBatchProfCnt;
		/// <summary>読み出した中で、一番古いプロファイルがバッチ内の何番目のプロファイルかを示す</summary>
		public uint dwGetBatchTopProfNo;
		/// <summary>読み出したプロファイルの数</summary>
		public byte byGetProfCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserve;
	};

	/// <summary>
	/// ストレージ状態要求構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_STRAGE_STATUS_REQ
	{
		/// <summary>読み出し対象面</summary>
		public uint dwRdArea;
	};

	/// <summary>
	/// ストレージ状態返信構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_STRAGE_STATUS_RSP
	{
		/// <summary>ストレージ面数</summary>
		public uint dwSurfaceCnt;
		/// <summary>アクティブストレージ面</summary>
		public uint dwActiveSurface;
	};

	/// <summary>
	/// ストレージ情報構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_STORAGE_INFO
	{
		/// <summary>ストレージ状態</summary>
		public byte byStatus;
		/// <summary>該当ストレージ面のプログラムNo</summary>
		public byte byProgramNo;
		/// <summary>ストレージ対象</summary>
		public byte byTarget;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 5)]
		public byte[] reserve;
		/// <summary>ストレージ点数</summary>
		public uint dwStorageCnt;
	};

	/// <summary>
	/// ストレージデータ取得要求構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_STORAGE_REQ
	{
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 4)]
		public byte[] reserve;
		/// <summary>読み出しストレージ面</summary>
		public uint dwSurface;
		/// <summary>読み出し開始するストレージ番号</summary>
		public uint dwStartNo;
		/// <summary>読み出し点数</summary>
		public uint dwDataCnt;
	};

	/// <summary>
	/// バッチプロファイルストレージ取得要求構造体
	/// </summary>
	[StructLayout(LayoutKind.Sequential)]
	public struct LJV7IF_GET_BATCH_PROFILE_STORAGE_REQ
	{
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 4)]
		public byte[] reserve;
		/// <summary>読み出しストレージ面</summary>
		public uint dwSurface;
		/// <summary>読み出しバッチ番号</summary>
		public uint dwGetBatchNo;
		/// <summary>バッチ内の読み出し開始プロファイル番号</summary>
		public uint dwGetBatchTopProfNo;
		/// <summary>読み出しプロファイル点数</summary>
		public byte byGetProfCnt;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
		public byte[] reserved;
	};
